fixes node action behind menu, move css loading to scss #210

--- a/src/themes/default/scss/_fsMenuLeft.scss
+++ b/src/themes/default/scss/_fsMenuLeft.scss
@@ -1,4 +1,6 @@
-#fs-layout-left {
+@import '../../../../node_modules/slideout/index.css';
+
+#fs-browser-layout {
   @media screen and (min-width: $breakpointPannelVisible) {
     transform: inherit !important;
   }
